--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+# h2 database configuration
+spring.datasource.url=jdbc:h2:mem:videotecha
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=videotecha
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+spring.jpa.defer-datasource-initialization=true
