Postgres database configuration with docker compose

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,21 @@
 
-# h2 database configuration
-spring.datasource.url=jdbc:h2:mem:videotecha
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=videotecha
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Database configuration
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.sql.init.platform=postgres
+ssl=true
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:videotecha}
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+spring.datasource.username=${POSTGRES_USER:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:postgres}
+spring.datasource.initialize=true
+spring.jpa.defer-datasource-initialization = true
 
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.sql.init.mode=always
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+
+spring.jpa.open-in-view=false
