[VAL-4] Configuring Flyway

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,22 +3,18 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL95Dialect
-        jdbc:
-          lob:
-            non_contextual_creation: 'true'
         format_sql: 'true'
-    defer-datasource-initialization: 'true'
+        default_schema: videotecha
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     show-sql: 'true'
-    open-in-view: 'false'
   datasource:
     driverClassName: org.postgresql.Driver
     password: ${POSTGRES_PASSWORD:postgres}
     username: ${POSTGRES_USER:postgres}
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:videotecha}
-    initialize: 'true'
-  sql:
-    init:
-      mode: always
-      platform: postgres
+  flyway:
+    url: jdbc:postgresql://localhost:5432/videotecha
+    schemas: videotecha
+    user: postgres
+    password: postgres
